Repair resizer spacing

--- a/dashboard/src/components/TableContainer.css
+++ b/dashboard/src/components/TableContainer.css
@@ -15,8 +15,7 @@ table {
 }
 
 .full-width-table {
-width: 100%;
-
+    width: 100%;
 }
 
 tr {
@@ -88,12 +87,28 @@ tbody tr:hover {
 .resizer {
     display: inline-block;
     /* background: blue; */
-background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 23%, var(--quiet) 23%, var(--quiet) 36%, rgba(255,255,255,0) 36%, rgba(255,255,255,0) 44%, var(--quiet) 44%, var(--quiet) 57%, rgba(255,255,255,0) 57%, rgba(255,255,255,0) 65%, var(--quiet) 65%, var(--quiet) 78%, rgba(255,255,255,0) 78%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 23%,
+        var(--quiet) 23%,
+        var(--quiet) 36%,
+        rgba(255, 255, 255, 0) 36%,
+        rgba(255, 255, 255, 0) 44%,
+        var(--quiet) 44%,
+        var(--quiet) 57%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 65%,
+        var(--quiet) 65%,
+        var(--quiet) 78%,
+        rgba(255, 255, 255, 0) 78%,
+        rgba(255, 255, 255, 0) 100%
+    );
     width: 1rem;
     height: 1.5rem;
     position: absolute;
     /*left: -.75rem;*/
-    right: -.2rem;
+    right: 0.25rem;
     top: 50%;
     transform: translateX(50%);
     z-index: 1;
@@ -101,7 +116,7 @@ background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 2
 
 /* makes the fancy red highlight on table to show the column is being resized */
 .isResizing {
-    background: red;
+    background: var(--secondary);
 }
 
 /* ensures input box is not larger than the column width */
